tests/NormalTests/paczka1/small_fuzzy/38521649.err
Error in line 1: DJnS9 A772 85,7
Error in line 4: A772 A761 51,1
